--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,7 +28,10 @@ jobs:
         cd from_mwt_ds/DataScience
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install coverage
     - name: Test with unittest
       run: |
         cd from_mwt_ds/DataScience
-        python -m unittest
+        coverage run -m unittest
+        coverage report -m
+
